It's now possible to change working hours for month during creating of accepting schedule. Fixed bug with incorrectly counting 11 hours break between shifts

--- a/app/static/css/table.css
+++ b/app/static/css/table.css
@@ -72,6 +72,10 @@ table th{
     padding-left: 1ex;
 }
 
+#working-hours {
+    background: #d9d9d9;
+}
+
 input {
     text-align: center;
     vertical-align: middle;
